--- a/layouts/default.html
+++ b/layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
-    <div id="main">
+    <div>
       <%= yield %>
     </div>
   </body>
