--- a/content/assets/stylesheets/_meyer-reset.scss
+++ b/content/assets/stylesheets/_meyer-reset.scss
@@ -16,7 +16,7 @@
   article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
   }
-  body {
+  html {
     line-height: 1;
   }
   ol, ul {
