--- a/content/assets/stylesheets/_theme.scss
+++ b/content/assets/stylesheets/_theme.scss
@@ -1,8 +1,14 @@
 body {
-  background: #fcfff5;
+  background: #F2F0DB;
+  color: #46453f;
 }
 
 .header {
-  background: #d1dbbd;
+  background: white;
+  color: #f06060;
   text-align: center;
+}
+
+.fear {
+  color: #8cbeb2;
 }
