--- a/content/assets/stylesheets/_type.scss
+++ b/content/assets/stylesheets/_type.scss
@@ -6,7 +6,21 @@ $base-line-height: 24px;
 
 $sans-family: "Fjalla One", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif-family: Gentium Book Basic, Palatino Linotype, Book Antiqua, Palatino, serif;
+$title-family: "Pathway Gothic One";
+$title-family: "Scrimshaw CPC";
+// $title-family: "Waterlily";
 
+$ms-scale: 1.3;
+$ms-up1: $base-font-size * $ms-scale;
+$ms-up2: $ms-up1 * $ms-scale;
+$ms-up3: $ms-up2 * $ms-scale;
+$ms-up4: $ms-up3 * $ms-scale;
+
+
+.header {
+  font-family: $title-family;
+  @include adjust-font-size-to($ms-up3, 1);
+}
 
 body {
   font-family: $serif-family;
