--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>A Brand New nanoc Site - <%= @item[:title] %></title>
     <link rel="stylesheet" href="stylesheets/main.css">
+    <link href='http://fonts.googleapis.com/css?family=BenchNine:300,400,700|Bad+Script|Shadows+Into+Light|Pathway+Gothic+One|Architects+Daughter|Amatic+SC:400,700|Courgette|Amaranth:400,400italic,700,700italic|Changa+One:400,400italic|Covered+By+Your+Grace|Fjalla+One' rel='stylesheet' type='text/css'>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
