beginning of a layout

--- a/content/assets/stylesheets/_layout.scss
+++ b/content/assets/stylesheets/_layout.scss
@@ -13,7 +13,7 @@ $susy: (
 }
 
 .header {
-  @include padding-leader(3, $ms-up3);
-  @include padding-trailer(3, $ms-up3);
-  @include trailer(1, $ms-up3);
+  @include padding-leader(3);
+  @include padding-trailer(3);
+  @include trailer(1);
 }
