--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,7 +10,17 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
-    <div>
+    <div class="header">
+      <div class="title">
+        love
+        <span class="fear">fear</span>
+        love
+      </div>
+      <div class="subtitle">
+        
+      </div>
+    </div>
+    <div id="main">
       <%= yield %>
     </div>
   </body>
