--- a/content/assets/stylesheets/_type.scss
+++ b/content/assets/stylesheets/_type.scss
@@ -7,7 +7,7 @@ $base-line-height: 24px;
 $sans-family: "Fjalla One", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif-family: Gentium Book Basic, Palatino Linotype, Book Antiqua, Palatino, serif;
 $title-family: "Pathway Gothic One";
-$title-family: "Scrimshaw CPC";
+// $title-family: "Scrimshaw CPC";
 // $title-family: "Waterlily";
 
 $ms-scale: 1.3;
@@ -17,9 +17,12 @@ $ms-up3: $ms-up2 * $ms-scale;
 $ms-up4: $ms-up3 * $ms-scale;
 
 
-.header {
+.title {
   font-family: $title-family;
   @include adjust-font-size-to($ms-up3, 1);
+}
+.subtitle {
+  font-family: $title-family;
 }
 
 body {
