--- a/content/assets/stylesheets/_type.scss
+++ b/content/assets/stylesheets/_type.scss
@@ -4,8 +4,8 @@ $base-font-size: 16px;
 $base-line-height: 24px;
 @include establish-baseline;
 
-$sans-family: "Fjalla One", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$serif-family: Gentium Book Basic, Palatino Linotype, Book Antiqua, Palatino, serif;
+$sans-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$serif-family: Cardo, Palatino Linotype, Book Antiqua, Palatino, serif;
 $title-family: "Pathway Gothic One";
 // $title-family: "Scrimshaw CPC";
 // $title-family: "Waterlily";
