another color variation

--- a/content/assets/stylesheets/_theme.scss
+++ b/content/assets/stylesheets/_theme.scss
@@ -1,10 +1,13 @@
 body {
   background: #f2f0db;
+  
   color: #46453f;
 }
 
 .header {
   background: white;
+  background: #f2f0db;
+  background: #f9f8ee;
   color: #f06060;
   text-align: center;
 }
