more playing around

--- a/content/assets/stylesheets/_theme.scss
+++ b/content/assets/stylesheets/_theme.scss
@@ -4,12 +4,19 @@ body {
   color: #46453f;
 }
 
+.title {
+  background: #5C4B51;
+  text-align: left;
+  padding-left: 1rem;
+  margin-right: 4rem;
+}
+
 .header {
   background: white;
   background: #f2f0db;
   background: #f9f8ee;
   color: #f06060;
-  text-align: center;
+  text-align: left;
 }
 
 .fear {
