more design tweaks

--- a/content/assets/stylesheets/_theme.scss
+++ b/content/assets/stylesheets/_theme.scss
@@ -5,10 +5,8 @@ body {
 }
 
 .title {
-  background: #5C4B51;
+  background: #5c4b51;
   text-align: left;
-  padding-left: 1rem;
-  margin-right: 4rem;
 }
 
 .header {
@@ -16,6 +14,7 @@ body {
   background: #f2f0db;
   background: #f9f8ee;
   color: #f06060;
+  color: #f3b562;
   text-align: left;
 }
 
