--- a/layouts/default.html
+++ b/layouts/default.html
@@ -13,7 +13,7 @@
     <div class="header">
       <div class="title">
         love
-        <span class="fear">fear</span>
+        <span class="fear">&#x1f628;</span>
         love
       </div>
       <div class="subtitle">
