--- a/layouts/default.html
+++ b/layouts/default.html
@@ -11,16 +11,17 @@
   </head>
   <body>
     <div class="header">
-      <div class="title">
-        love
-        <span class="fear">&#x1f628;</span>
-        love
-      </div>
-      <div class="subtitle">
-        
+      <div class="logoy">
+        <div class="container">
+          <div class="title">
+            love
+            <span class="fear">&#x1f628;</span>
+            love
+          </div>
+        </div>
       </div>
     </div>
-    <div id="main">
+    <div class="container">
       <%= yield %>
     </div>
   </body>
