--- a/content/assets/stylesheets/_layout.scss
+++ b/content/assets/stylesheets/_layout.scss
@@ -12,7 +12,12 @@ $susy: (
 }
 
 .header {
-  @include padding-leader(4);
-  @include padding-trailer(2);
+  @include padding-leader(5);
+  @include padding-trailer(1);
   @include trailer(2);
+}
+
+.logoy {
+//  @include padding-trailer(.5);
+//  @include padding-leader(.5);
 }
