--- a/content/assets/stylesheets/_theme.scss
+++ b/content/assets/stylesheets/_theme.scss
@@ -6,7 +6,7 @@ body {
 
 .logoy {
   background: #5c4b51;
-  text-align: left;
+  text-align: left;  
 }
 
 .header {
@@ -17,4 +17,8 @@ body {
 
 .fear {
   color: #8cbeb2;
+}
+
+.title {
+
 }
