--- a/content/assets/stylesheets/_layout.scss
+++ b/content/assets/stylesheets/_layout.scss
@@ -21,6 +21,32 @@ $susy: (
   height: 3em;
 }
 
+.logoy .container {
+  position: relative;
+  &:before {
+    display: block;
+    position: absolute;
+    width: 12em;
+    height: 7.5em;
+    top: -7.5em;
+    left: -.5em;
+    content: "";
+    background: #f06060;
+  }
+  &:after {
+    display: block;
+    position: absolute;
+    width: 12em;
+    height: 1.5em;
+    top: 3em;
+    left: -.5em;
+    content: "";
+    background: #f06060;
+  }
+//  @include padding-trailer(.5);
+//  @include padding-leader(.5);
+}
+
 .fear {
   position: relative;
   top: -.08em;
