--- a/content/assets/stylesheets/_layout.scss
+++ b/content/assets/stylesheets/_layout.scss
@@ -1,11 +1,20 @@
 $susy: (
-  columns: 12,
+  columns: 9,
   column-width: 4em,
   gutters: 1/4,
   math: fluid,
   output: static,
   container-position: center
 );
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  position: relative;
+}
 
 .container {
   @include container;
@@ -24,4 +33,24 @@ $susy: (
 .fear {
   position: relative;
   top: -.08em;
+}
+
+.main {
+  @include span(6);
+}
+
+.secondary {
+  @include span(3 at 7 of 9);
+}
+
+.content {
+  padding-bottom: 3em;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  @include padding-leader;
+  @include padding-trailer;
 }
