--- a/content/assets/stylesheets/_theme.scss
+++ b/content/assets/stylesheets/_theme.scss
@@ -1,6 +1,5 @@
 body {
-  background: #f2f0db;
-  
+  background: #f2f0db;  
   color: #46453f;
 }
 
@@ -43,6 +42,10 @@ body {
     background: #f06060;
     border-top: .5em solid #904040;
   }
-//  @include padding-trailer(.5);
-//  @include padding-leader(.5);
+}
+
+.footer {
+  background: #5c4b51;
+  background: #8cbeb2;
+  color: #5c4b51;
 }
