--- a/layouts/default.html
+++ b/layouts/default.html
@@ -21,8 +21,18 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <%= yield %>
+    <div class="container content">
+      <div class="main">
+        <%= yield %>
+      </div>
+      <div class="secondary">
+        secondary
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        footer
+      </div>
     </div>
   </body>
 </html>
