--- a/content/assets/stylesheets/main.scss
+++ b/content/assets/stylesheets/main.scss
@@ -3,6 +3,15 @@
 @import "susy";
 @import "breakpoint";
 
+$paper: #f9f8ee;
+$tan:   #f2ebdb;
+$plum:  #5c4b51;
+$dark-plum: #46453f;
+$red:   #f06060;
+$iron:  #904040;
+$teal:  #8cbeb2;
+$orange:#f3b562;
+
 @import "type";
 @import "layout";
 @import "theme";
