--- a/content/assets/stylesheets/_layout.scss
+++ b/content/assets/stylesheets/_layout.scss
@@ -32,7 +32,7 @@ body {
 
 .fear {
   position: relative;
-  top: -.08em;
+  top: 2px;
 }
 
 .main {
@@ -44,7 +44,7 @@ body {
 }
 
 .content {
-  padding-bottom: 3em;
+  @include padding-trailer(3);
 }
 
 .footer {
