--- a/content/assets/stylesheets/main.scss
+++ b/content/assets/stylesheets/main.scss
@@ -10,6 +10,7 @@ $dark-plum: #46453f;
 $red:   #f06060;
 $iron:  #904040;
 $teal:  #8cbeb2;
+$dark-teal: #529282;
 $orange:#f3b562;
 
 @import "type";
