--- a/layouts/default.html
+++ b/layouts/default.html
@@ -14,9 +14,11 @@
       <div class="logoy">
         <div class="container">
           <div class="title">
-            love
-            <span class="fear"><img src="/assets/images/layout/fear.png" /></span>
-            love
+            <a href="/">
+              love
+              <span class="fear"><img src="/assets/images/layout/fear.png" /></span>
+              love
+            </a>
           </div>
         </div>
       </div>
